For ecotaxa/ecotaxa_dev#4: Store MRU projects per user.
